# BrickitV2

./: .dockerignore  .gitignore  .gitignore.server-public  Dockerfile  README.md  fly.toml  pyproject.toml
.cursor/rules/: prod-site.mdc
client/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/public/: robots.txt  site.webmanifest  sitemap.xml
client/src/: App.tsx  index.css  main.tsx
client/src/components/: DonationBanner.tsx  FilterSelector.tsx  ImageUploader.tsx  InstructionStep.tsx  LoginButton.tsx  MosaicPreview.tsx  PartsList.tsx  ProfilePage.tsx  SaveCreationDialog.tsx
client/src/constants/: brick.constants.ts  index.ts  mosaic.constants.ts
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useCanonical.ts
client/src/lib/: creationService.ts  env.ts  posthog.ts  stripe.ts  supabase.ts  toast.ts
client/src/pages/: AppPage.tsx  CreatorPage.tsx  (+6 more)
docs/: AUTH_FLOW_AUDIT.md  AUTH_INITIALIZATION_BEST_PRACTICES.md  AUTH_SESSION_AUDIT.md  AUTH_TESTING_GUIDE.md  GODADDY_WWW_REDIRECT_GUIDE.md  SEARCH_CONSOLE_NEXT_STEPS.md  SECURITY_FIXES_APPLIED.md  SEO_IMPLEMENTATION_PLAN.md  SEO_IMPLEMENTATION_SUMMARY.md  SEO_MANUAL_SETUP_GUIDE.md  SITEMAP_DIRECT_ACCESS.md  WELCOME_EMAIL_SETUP.md  brickit_palette.aco
docs/ads/: BRICKIT_PITCH.md  BRICKIT_STORY.md
marketplaces/pick_a_brick/: .gitignore  analyze_missing_colors.py  analyze_substitutes.py  create_universal_palette.py  generate_with_substitutes.py  scrape_2x2_only.py  scraper.py
scripts/: .gitignore  DEPLOYMENT_INSTRUCTIONS.md  QUICKSTART.md  README.md  cursor_conversations_export.ipynb  deploy-conversations.sh  requirements.txt
server/: README.md  index.js  package-lock.json  package.json  tsconfig.json
server/public/: brickit_conversations_public.json  bricks_and_plates.json  bricks_and_plates_universal.json  bricks_and_plates_with_substitutes.json
server/src/: index.ts
supabase/: config.toml
supabase/migrations/: 001_create_user_profiles_with_trigger.sql  002_create_creations_table.sql  003_add_preview_image_url.sql  004_create_donations_table.sql  005_add_user_to_audience_on_signup.sql  011_storage_policies.sql  012_make_pixel_data_nullable.sql  013_drop_pixel_data.sql  014_add_rendered_image_url.sql  015_add_creations_user_profiles_fk.sql  016_add_creations_user_profiles_constraint.sql  017_update_sharing_status.sql  018_add_welcome_email_tracking.sql  019_fix_overlapping_rls_policies.sql
(+85 files in other folders)
